add loggs